--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <i id= "home"></i>
     <button>Thing</button>
     <h1>Rules for Heads Up Holdem</h1>
 
