--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
     <i id= "home"></i>
-    <button onclick= "test()">Thing </button>
+    <button onclick= "test()">Start </button>
     <script>
         function test(){
-            document.addEventListener('keydown', function(event) {
-            if (event.key === 'Q'||'q') {
-                        console.log("Leave page")
-                        window.location.href = 'game.html';
-                    }
-            });
+            window.location.href = 'game.html';
         }
     </script>
     
