--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
     <h3>Rules for Heads Up Holdem</h3> 
     <ol>
         <li> Player pays the buyin fee (Diffrent tables have diffrent buy in costs)</li>
-        <li> Each player flips their 2 private coins </li>
+        <li> Each player flips their 2 private coins keeping it hidden from others </li>
         <li>Dealer is randomly selected</li>
-        <li>he dealer then starts first betting round. In a clockwise order players can raise, match or fold. (Players must all match this and can raise it further to countinue playing or can fold)</li>
-        <li>The dealer then flips 2 coins community coins.</li>
-        <li>A second betting round occurs (starting on the dealer). In a clockwise order players can raise, match or fold. (Players must all match the bet or can fold)</li>
-        <li>The dealer then flips the final 2 coins community coins.></li> 
+        <li>A betting round occurs (starting on the dealer). In a clockwise order players can raise, match or fold. (Players must all match the bet or can fold)</li>
+        <li>The dealer then flipsthe four community coins.</li>
         <li> Just count your heads and tails and use your highest number</li>
         <li>All personal coins are revealed and player with best hand type wins (If players tie on a hand, heads triumph over tails if there is still a tie then the pot is split equally between all)</li>
     </ol>
