Worked on bot's gambling system
Revised betting round descriptions in README.md, game.html, and index.html to clarify that players can bet or fold, removing references to raising and matching. Enhanced bot gambling logic, added bet button UI, improved tie-break and betting functions, fixed asset path, and enabled background music playback in game loop.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li> Player pays the buyin fee (Diffrent tables have diffrent buy in costs)</li>
         <li> Each player flips their 2 private coins keeping it hidden from others </li>
         <li>Dealer is randomly selected</li>
-        <li>A betting round occurs (starting on the dealer). In a clockwise order players can raise, match or fold. (Players must all match the bet or can fold)</li>
+        <li>A betting round occurs (starting on the dealer). In a clockwise order players can  bet or fold. (Players must all match the bet or can fold)</li>
         <li>The dealer then flipsthe four community coins.</li>
         <li> Just count your heads and tails and use your highest number</li>
         <li>All personal coins are revealed and player with best hand type wins (If players tie on a hand, heads triumph over tails if there is still a tie then the pot is split equally between all)</li>
