--- a/game.html
+++ b/game.html
@@ -15,6 +15,9 @@
 		<button id= "quit_button" onclick="quit_game()">Quit</button>
 		<button id="understand_rules" onclick="game_loop()">I understand all the rules and am ready to play</button>
 	</div>
+	<div id = "bet_buttons">
+		<button id="bet" onclick="bet()">Bet</button>
+	</div>
 	<script>
 		const canvas = document.getElementById("game_window")
 		const ctx = canvas.getContext("2d")
@@ -35,34 +38,39 @@
 			flip_own_coins(){
 				this.priv_coins = Coin_Flip(2)
 			}
-			gamble(round_num,public_coins){
-				//expand upon (going to keep it simple with a randomised algo suign if statements and math.random)
-				if (round_num === 1){
-					if (this.priv_coins === "hh" ||this.priv_coins === "tt"){
-						console.log(money/difficulty*Math.random())
-						return (money/difficulty*Math.random())
+			gamble(curr_bet){
+				let risk_lvl = Math.floor(difficulty*10)
+				this.difficulty = Math.random()
+				if (this.priv_coins === "hh" ||this.priv_coins === "tt"){
+					if (money > curr_bet){
+						return "bet"
 					}
-					else{
-						//if money
-						console.log(money/difficultyMath.random())
-						return (money/difficulty*Math.random())
+				}else{
+					if (risk_lvl < 5) {
+						return "fold";
+					} else {
+						if (money >curr_bet){
+							return "bet";
+						}else{
+							return "fold";
+						}
 					}
-				}
-				else{
-					console.log("filler")
-				}
-			}
+				}	
+			}	
+			
 			buyin_pay(buyin_cost){
-				if (money > buyin_cost){
+				if (this.money > buyin_cost){
+					this.money = this.money - buyin_cost
 					return `${this.name} paid`
+					
 				}
 				else{
 					//KILL Bot instance and leave table
 					bot_leave_anim()
 					clearInterval(); 
-					return `${this.name} ran out of money and left the table`
+					alert(`${this.name} ran out of money and left the table`)
 				}
-			}
+			}	
 		}
 		function bot_leave_anim(){
 			console.log("filler")
@@ -117,7 +125,8 @@
 			}
 			let player_money = localStorage.getItem('Money')
 			if (localStorage.getItem('Money')> buyin_cost){
-				localStorage.setItem('Money',player_money- buyin_cost) 
+				localStorage.setItem('Money',player_money - buyin_cost) 
+				console.log(localStorage.getItem('Money'))
 			}
 			bot_names = name_gen(player_count)
 			let bot_list = []
@@ -150,19 +159,34 @@
 				return "Error, not valid handtype just yet"
 			}
 		}
-		function tie_break(tied_players){
-			//if tied_players ==="player"{
-				
-			//}//check ifincludes player
-			// how to do this i wonder
-			//logic to go here
+		function tie_break(tied_players,pot){
+			let head_count_to_beat = -1
+			tied_players.forEach(element => {
+				let heads_count_tie = hand.filter(item => item === "h").length;
+				if (heads_count_tie < head_count_to_beat){
+					best_players.push(element)
+					head_count_to_beat = heads_count_tie 
+				}
+			});
+			best_players.forEach(element => {
+				if (bot){
+					botname.pay(element,(pot/best_players.length))
+				}
+			});
 		}
+		function gamble(players){
+			const bet_amount = floor(Math.random()*10)
+			players.forEach(element => {
+				bot_instance.gamble(bet_amount)
+			}); 
 
+		}
+		function pay()
 		function draw_main_menu(){
 			understand_rules.style.display = 'none';
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			const backgroundImage = new Image();
-    		backgroundImage.src = 'pixel_asets/menu.png';
+    		backgroundImage.src = 'assets/menu.png';
 			backgroundImage.onload = function() {
 				ctx.drawImage(backgroundImage,0, 0, canvas.width, canvas.height );
 			};
@@ -190,7 +214,7 @@
 			"- Player pays the buy-in fee (Costs 6 Money atm)",
 			"- Each player flips their 2 private coins.",
 			"- Dealer is randomly selected.",
-			"- The dealer starts the betting round. In a clockwise order, players can raise, match, or fold. (Players must all match the bet and can raise it further to continue playing or fold.)",
+			"- A betting round occurs (starting on the dealer). In a clockwise order players can  bet or fold. (Players must all match the bet or can fold)",
 			"- The dealer flips 4 community coins.",
 			"- Count your heads and tails and use your highest number.",
 			"- All personal coins are revealed. The player with the best hand type wins. (If players tie on a hand, heads triumph over tails. If there is still a tie, the pot is split equally.)"
@@ -200,6 +224,7 @@
 				ctx.fillText(rule, 10, 180 + i * 30);
 			});
 			console.log("drawn instructions popup")
+			console.log(200/Math.random()*Math.random())
 
 		}
 
@@ -231,7 +256,9 @@
 		//}
 		function game_loop(){
 			// game logic fix needed
-			console.log(start_game(4,6))
+			const audio = new Audio('music/Get_After_It.ogg');
+			audio.play()
+			console.log(start_game(3,6))
 			console.log("test of game loop")
 			draw_game();
 			//	draw_game();
@@ -249,13 +276,10 @@
 		window.onload = function(){
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			draw_main_menu()
-			const audio = new Audio('music/Get_After_It.ogg');
-			//holy crap my ears when editing
-			// make sure to remove comment below for music :)
-			//audio.play()
+			
 
 		}
-		
+
     </script>
 </body>
 </html>
