--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel = "stylesheet" href = "style.css">
-   
+    <link rel = "stylesheet" href = "home_style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <i id= "home"></i>
-    <button onclick= "test()">Start </button>
+    <button id = "game_win_start_btn" onclick= "test()">Start game window </button>
     <script>
         function test(){
             window.location.href = 'game.html';
