--- a/game.html
+++ b/game.html
@@ -274,7 +274,7 @@
 		function win_screen(vaule,player_list){
 			setTimeout(() => {
 				console.log('test')
-				if (vaule !== "no"){
+				if (vaule !== "No"){
 					ctx.clearRect(0, 0, canvas.width, canvas.height)
 					ctx.fillStyle = '#497425'
 					ctx.fillRect(0, 0, canvas.width, canvas.height)
